# PyQt6Resource

./: .gitignore  LICENSE_BSD-3.md  LICENSE_MIT.md  README.md  pyproject.toml
src/py_qt6_resource/: __init__.py
